--- a/templates/tables.html
+++ b/templates/tables.html
@@ -105,7 +105,7 @@
         <h4>KNN Evaluation :</h4>
         <img class = "img-fluid" src="{{ url_for('static', filename='images/KNN_Eval.png') }}" alt=""><br><br> <hr>
         <h4>XGBoost Evaluation :</h4>
-        <img class = "img-fluid" src="{{ url_for('static', filename='images/XGBooost_Eval.png') }}" alt=""><br><br> <hr>
+        <img class = "img-fluid" src="{{ url_for('static', filename='images/XGBooost_EVAL.png') }}" alt=""><br><br> <hr>
 
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
