--- a/templates/whatandwhy.html
+++ b/templates/whatandwhy.html
@@ -65,7 +65,7 @@
     <div class = "div1">
         XGBoost is an implementation of Gradient Boosted decision trees. This library was written in C++. It is a type of Software library that was designed basically to improve speed and model performance. It has recently been dominating in applied machine learning. XGBoost models majorly dominate in many Kaggle Competitions. In this algorithm, decision trees are created in sequential form. Weights play an important role in XGBoost. Weights are assigned to all the independent variables which are then fed into the decision tree which predicts results. The weight of variables predicted wrong by the tree is increased and the variables are then fed to the second decision tree. These individual classifiers/predictors then ensemble to give a strong and more precise model. It can work on regression, classification, ranking, and user-defined prediction problems.
         <br> 
-        <img src="{{ url_for('static', filename='images/XGBoost.png') }}" alt=""><br><br>
+        <img src="{{ url_for('static', filename='images/XGBoost.png') }}" alt="" class = "img-fluid"><br><br>
         To Know more about XGBoost <a href="https://en.wikipedia.org/wiki/XGBoost">Click Here</a><br>
     </div>
   
