--- a/templates/all_algos_used.html
+++ b/templates/all_algos_used.html
@@ -113,13 +113,16 @@
         
 
 
-    <div class="container-fluid footer">
-        <div class="row mt-5">
-          <div class="col-12 text-center bg-dark text-light py-3">
-            <p>&copy; 2023 Value My Car</p>
-          </div>
+        <div class="container-fluid footer">
+            <div class="row mt-5">
+              <div class="col-12 text-center bg-dark text-light py-3">
+                <p>&copy; 2023 Value My Car</p>
+              </div>
+              <div class="col-12 text-center bg-dark text-light py-3">
+                  <a href="{{ url_for('feedback') }}" >Feedback</a>
+              </div>
+            </div>
         </div>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
