--- a/templates/tables.html
+++ b/templates/tables.html
@@ -131,6 +131,9 @@
           <div class="col-12 text-center bg-dark text-light py-3">
             <p>&copy; 2023 Value My Car</p>
           </div>
+          <div class="col-12 text-center bg-dark text-light py-3">
+              <a href="{{ url_for('feedback') }}" >Feedback</a>
+          </div>
         </div>
     </div>
 
